Fix: 변수적용(gap-desktop)

--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -1,5 +1,5 @@
 .main {
-  padding-bottom: 150px;
+  padding-bottom: $gap-desktop;
   // border-radius: 20.0078px;
   overflow: hidden;
 }
